# temp-opengl

./: .gitignore  CMakeLists.txt  vcpkg.json
assets/: config.json
assets/shaders/: default.frag  default.vert  light.vert  test.frag
include/: camera.h  colorControl.h  mesh.h  moveObject.h  shader.h
include/buffers/: EBO.h  UBO.h  VAO.h  VBO.h
include/core/: application.h  colorControl.h  inputmanager.h
include/graphics/: camera.h  mesh.h  model.h  shader.h  transform.h
include/graphics/textures/: mytexture.h  texture.h
include/scene/: entity.h
include/utils/: setting.h
src/: camera.cpp  colorControl.cpp  main.cpp  moveObject.cpp  shader.cpp  texture.cpp
src/buffers/: UBO.cpp  VAO.cpp
src/core/: application.cpp  inputmanager.cpp
src/graphics/: camera.cpp  mesh.cpp  model.cpp  shader.cpp  transform.cpp
src/graphics/textures/: mytexture.cpp  mytexture2D.cpp  texture.cpp  texture2D.cpp
src/scene/: entity.cpp
src/utils/: setting.cpp
